--- a/assets/css/modules/styleMedScreen.css
+++ b/assets/css/modules/styleMedScreen.css
@@ -152,21 +152,58 @@
 
     main .filtrar #iModelo,
     select {
-        font-size: 1.6rem;
+        font-size: 2rem;
+    }
+
+    main #sobre [class^='posicionamentoMob'] {
+        margin-bottom: 20em;
     }
 
     main #sobre .posicionamentoMobDois {
-        margin-top: -50em;
+        margin-bottom: 40em;
     }
 
     main #sobre img {
-        height: 65%;
+        height: 200%;
+    }
+
+    @media only screen and (max-width: 800px) {
+        main #sobre {
+            margin: 5em 0em 0em;
+        }
+
+        main #sobre .about {
+            grid-template-rows: 1fr 1fr;
+            grid-template-columns: 1fr;
+        }
+
+        main #sobre .posicionamentoMob {
+            display: flex;
+            flex-direction: column-reverse;
+            margin-top: 40em 0 -20em;
+        }
+
+        main #sobre .posicionamentoMobDois {
+            flex-direction: column;
+        }
+
+        main #sobre img {
+            width: 100%;
+            max-height: 30em;
+            margin: 0;
+        }
+
+        main #sobre p {
+            width: 100%;
+            margin: 2em 0;
+            font-size: 2.2rem;
+        }
     }
 
     /* Footer */
 
     footer small {
-        font-size: 1rem;
+        font-size: 1.6rem;
     }
 
     /* CSS DO LOGIN E CADASTRO */
